--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "@ali1416/qrcode-encoder-js",
+  "name": "@ali1416/qrcode-encoder",
   "version": "0.0.1",
   "description": "二维码生成器js版",
   "keywords": [
     "qrcode"
   ],
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "scripts": {
+    "clean": "rd /s/q lib & del qrcode-encoder.js & del qrcode-encoder.min.js",
+    "tsc": "tsc --removeComments",
+    "rollup": "rollup -c --bundleConfigAsCjs",
+    "dev": "npm run clean && npm run tsc && npm run rollup",
+    "build": "npm run compile"
+  },
+  "private": false,
   "authors": [
     {
       "name": "ali",
       "email": "ali-k@foxmail.com"
     }
   ],
-  "main": "./lib/index-node.js",
-  "browser": "./lib/index.js",
-  "typings": "./lib/index-types.d.ts",
-  "scripts": {
-    "dev": "ts-node",
-    "build": "tsc"
-  },
-  "private": false,
   "license": "Apache-2.0",
   "bugs": "https://github.com/ALI1416/qrcode-encoder-js/issues/new",
   "repository": {
     "type": "git",
     "url": "https://github.com/ALI1416/qrcode-encoder-js.git"
   },
-  "homepage": "https://github.com/ALI1416/qrcode-encoder-js"
+  "homepage": "https://github.com/ALI1416/qrcode-encoder-js",
+  "devDependencies": {
+    "rollup": "^3.23.0",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "typescript": "^5.0.4"
+  }
 }
