--- a/qrcode-encoder/tsconfig.dist.json
+++ b/qrcode-encoder/tsconfig.dist.json
@@ -1,12 +1,7 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "module": "ESNext",
-    "target": "ESNext",
-    "moduleResolution": "Node",
-    "strict": true,
-  },
-  "include": [
-    "./src/**/*.ts"
-  ]
+    "strict": true
+  }
 }
