--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ali1416/qrcode-encoder",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "二维码生成器JavaScript版",
   "scripts": {
     "tsc": "npx tsc",
@@ -39,8 +39,9 @@
     "access": "public"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.1",
+    "@babel/core": "^7.22.9",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-terser": "^0.4.3"
+    "@rollup/plugin-terser": "^0.4.3",
+    "typescript": "^5.1.6"
   }
 }
