--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "access": "public"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.5",
+    "@babel/core": "^7.24.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-terser": "^0.4.4",
-    "typescript": "^5.3.2"
+    "rollup": "^4.13.0",
+    "typescript": "^5.4.2"
   }
 }
